--- a/TourIt/en.lproj/MainStoryboard.storyboard
+++ b/TourIt/en.lproj/MainStoryboard.storyboard
@@ -46,7 +46,7 @@
                     <navigationItem key="navigationItem" id="AJA-De-Mbh">
                         <barButtonItem key="rightBarButtonItem" title="Picture Bitches" id="WCe-Vx-vsE">
                             <connections>
-                                <segue destination="scF-fX-gOH" kind="modal" id="bC4-gD-usD"/>
+                                <segue destination="scF-fX-gOH" kind="modal" identifier="camera" id="bC4-gD-usD"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -242,21 +242,36 @@
                         <subviews>
                             <imageView translatesAutoresizingMaskIntoConstraints="NO" userInteractionEnabled="NO" contentMode="scaleToFill" image="bgndtexture.jpg" id="dgH-Fd-IBf"/>
                             <view translatesAutoresizingMaskIntoConstraints="NO" alpha="0.5" contentMode="scaleToFill" id="1fd-EG-JYP">
+                                <subviews>
+                                    <textField translatesAutoresizingMaskIntoConstraints="NO" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Do search" minimumFontSize="17" clearButtonMode="always" text="" id="pg6-p9-WgU">
+                                        <textInputTraits key="textInputTraits" returnKeyType="search"/>
+                                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <connections>
+                                            <action selector="textComplete:" destination="ULu-Jz-xq2" eventType="editingDidEndOnExit" id="aZu-Wu-1ae"/>
+                                            <outlet property="delegate" destination="6uF-re-Wfe" id="rlD-bS-nHC"/>
+                                        </connections>
+                                    </textField>
+                                </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                            </view>
-                            <textField translatesAutoresizingMaskIntoConstraints="NO" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Do search" minimumFontSize="17" clearButtonMode="always" text="" id="pg6-p9-WgU">
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="6L6-Qp-FWf"/>
+                                    <constraint firstItem="pg6-p9-WgU" firstAttribute="bottom" secondItem="1fd-EG-JYP" secondAttribute="bottom" type="default" id="Fcg-PN-tO0"/>
+                                    <constraint firstItem="pg6-p9-WgU" firstAttribute="top" secondItem="1fd-EG-JYP" secondAttribute="top" type="default" id="Iq5-U6-tRc"/>
+                                    <constraint firstItem="pg6-p9-WgU" firstAttribute="leading" secondItem="1fd-EG-JYP" secondAttribute="leading" type="default" id="Qmt-H5-FF1"/>
+                                    <constraint firstItem="pg6-p9-WgU" firstAttribute="trailing" secondItem="1fd-EG-JYP" secondAttribute="trailing" type="default" id="S9D-iK-1lQ"/>
                                 </constraints>
-                                <textInputTraits key="textInputTraits" returnKeyType="search"/>
-                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <connections>
-                                    <action selector="textComplete:" destination="ULu-Jz-xq2" eventType="editingDidEndOnExit" id="aZu-Wu-1ae"/>
-                                    <outlet property="delegate" destination="6uF-re-Wfe" id="rlD-bS-nHC"/>
-                                </connections>
-                            </textField>
+                            </view>
+                            <tableViewCell translatesAutoresizingMaskIntoConstraints="NO" contentMode="scaleToFill" selectionStyle="blue" indentationWidth="10" id="r0h-ow-V0Z">
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                            </tableViewCell>
                             <tableView translatesAutoresizingMaskIntoConstraints="NO" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="vwH-ao-l2E">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="402" id="TmQ-yt-irb"/>
+                                </constraints>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="blue" indentationWidth="10" reuseIdentifier="result" textLabel="drL-O7-Wbf" style="IBUITableViewCellStyleDefault" id="Mry-sY-2Ky">
                                         <rect key="frame" x="0.0" y="22" width="320" height="44"/>
@@ -281,22 +296,41 @@
                                     <outlet property="delegate" destination="6uF-re-Wfe" id="I7U-Xp-5RB"/>
                                 </connections>
                             </tableView>
+                            <button translatesAutoresizingMaskIntoConstraints="NO" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" hasAttributedTitle="NO" lineBreakMode="middleTruncation" id="Tv8-7G-MDu">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="23" id="6Vy-H1-QtM"/>
+                                    <constraint firstAttribute="width" constant="50" id="r6a-p7-HFX"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Done">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="groupSelectDone:" destination="6uF-re-Wfe" eventType="touchUpInside" id="bAG-Mi-pMS"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="r0h-ow-V0Z" firstAttribute="trailing" secondItem="ft7-wg-kj2" secondAttribute="trailing" type="default" id="29O-Sm-8sc"/>
                             <constraint firstItem="vwH-ao-l2E" firstAttribute="bottom" secondItem="ft7-wg-kj2" secondAttribute="bottom" type="default" id="3Pp-c1-J9N"/>
                             <constraint firstItem="1fd-EG-JYP" firstAttribute="top" secondItem="ft7-wg-kj2" secondAttribute="top" constant="20" symbolic="YES" type="default" id="56k-Et-pXe"/>
-                            <constraint firstAttribute="trailing" secondItem="1fd-EG-JYP" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="5ma-ub-Fyq"/>
+                            <constraint firstItem="r0h-ow-V0Z" firstAttribute="leading" secondItem="ft7-wg-kj2" secondAttribute="leading" type="default" id="F8Z-Tl-9mE"/>
                             <constraint firstItem="1fd-EG-JYP" firstAttribute="leading" secondItem="ft7-wg-kj2" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="FSJ-Te-kiG"/>
-                            <constraint firstItem="pg6-p9-WgU" firstAttribute="top" secondItem="ft7-wg-kj2" secondAttribute="top" constant="20" symbolic="YES" type="default" id="IXY-7I-0eN"/>
+                            <constraint firstAttribute="trailing" secondItem="Tv8-7G-MDu" secondAttribute="trailing" constant="7" id="Hkb-Ke-h9n"/>
                             <constraint firstItem="dgH-Fd-IBf" firstAttribute="trailing" secondItem="ft7-wg-kj2" secondAttribute="trailing" type="default" id="J1b-N4-0VK"/>
+                            <constraint firstAttribute="bottom" secondItem="r0h-ow-V0Z" secondAttribute="bottom" constant="416" id="MJH-7d-TuX"/>
                             <constraint firstItem="vwH-ao-l2E" firstAttribute="leading" secondItem="ft7-wg-kj2" secondAttribute="leading" type="default" id="MzT-Ua-mQG"/>
-                            <constraint firstItem="vwH-ao-l2E" firstAttribute="top" secondItem="pg6-p9-WgU" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="afT-DS-F5C"/>
-                            <constraint firstAttribute="trailing" secondItem="pg6-p9-WgU" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="cM5-aa-tdS"/>
+                            <constraint firstItem="r0h-ow-V0Z" firstAttribute="top" secondItem="ft7-wg-kj2" secondAttribute="top" type="default" id="ZvT-Us-Tgg"/>
+                            <constraint firstItem="Tv8-7G-MDu" firstAttribute="top" secondItem="ft7-wg-kj2" secondAttribute="top" constant="22" id="cqs-MU-1R8"/>
                             <constraint firstItem="dgH-Fd-IBf" firstAttribute="leading" secondItem="ft7-wg-kj2" secondAttribute="leading" type="default" id="eYf-BI-84n"/>
                             <constraint firstItem="dgH-Fd-IBf" firstAttribute="top" secondItem="ft7-wg-kj2" secondAttribute="top" type="default" id="g58-F7-7zl"/>
                             <constraint firstItem="vwH-ao-l2E" firstAttribute="top" secondItem="1fd-EG-JYP" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="iml-3S-aYe"/>
-                            <constraint firstItem="pg6-p9-WgU" firstAttribute="leading" secondItem="ft7-wg-kj2" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="tiL-7j-R1J"/>
+                            <constraint firstAttribute="trailing" secondItem="1fd-EG-JYP" secondAttribute="trailing" constant="66" id="l8a-3X-ObC"/>
                             <constraint firstItem="dgH-Fd-IBf" firstAttribute="bottom" secondItem="ft7-wg-kj2" secondAttribute="bottom" type="default" id="v4s-98-86F"/>
                             <constraint firstItem="vwH-ao-l2E" firstAttribute="trailing" secondItem="ft7-wg-kj2" secondAttribute="trailing" type="default" id="y6e-HM-TC7"/>
                         </constraints>
@@ -358,6 +392,7 @@
         <class className="TICameraControllerViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/TICameraControllerViewController.h"/>
             <relationships>
+                <relationship kind="action" name="groupSelectDone:"/>
                 <relationship kind="action" name="retakeImage:"/>
                 <relationship kind="action" name="textComplete:"/>
                 <relationship kind="outlet" name="ImageView" candidateClass="UIImageView"/>
