--- a/TourIt/en.lproj/MainStoryboard.storyboard
+++ b/TourIt/en.lproj/MainStoryboard.storyboard
@@ -1,66 +1,105 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2809" systemVersion="11E53" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="D4F-cQ-rtK">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2818" systemVersion="11E53" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="lKe-Nx-rdm">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1884"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1900"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
-        <scene sceneID="PkV-Yz-HVX">
+        <scene sceneID="hlr-4d-QM4">
             <objects>
-                <tableViewController id="e9Y-EX-Do7" customClass="TIViewController" sceneMemberID="viewController">
-                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="singleLineEtched" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="dEF-XG-mik">
-                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
-                        <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="tag" id="67S-mq-Gds">
-                                <rect key="frame" x="0.0" y="46" width="320" height="45"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                    <rect key="frame" x="10" y="1" width="280" height="43"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                </view>
+                <viewController wantsFullScreenLayout="YES" id="lKe-Nx-rdm" customClass="TIViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="CDE-Cb-idU">
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <tableView translatesAutoresizingMaskIntoConstraints="NO" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="puq-Fh-ct1">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="214" id="AEM-ok-pTP"/>
+                                </constraints>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="tag" id="67S-mq-Gds">
+                                        <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="300" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                        <connections>
+                                            <segue destination="DfR-QA-RQE" kind="push" id="dqL-Bq-75p"/>
+                                        </connections>
+                                    </tableViewCell>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="map" id="YHO-Qj-x9v">
+                                        <rect key="frame" x="0.0" y="66" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="300" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                        <connections>
+                                            <segue destination="DfR-QA-RQE" kind="push" id="tXU-Wh-dlI"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                            <button translatesAutoresizingMaskIntoConstraints="NO" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" hasAttributedTitle="NO" lineBreakMode="middleTruncation" id="sip-ws-hP3">
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Button">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
                                 <connections>
-                                    <segue destination="DfR-QA-RQE" kind="push" id="dqL-Bq-75p"/>
+                                    <segue destination="scF-fX-gOH" kind="modal" id="JDG-Mj-2G0"/>
                                 </connections>
-                            </tableViewCell>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="map" id="YHO-Qj-x9v">
-                                <rect key="frame" x="0.0" y="91" width="320" height="45"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                    <rect key="frame" x="10" y="0.0" width="280" height="43"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                </view>
-                                <connections>
-                                    <segue destination="DfR-QA-RQE" kind="push" id="tXU-Wh-dlI"/>
-                                </connections>
-                            </tableViewCell>
-                        </prototypes>
+                            </button>
+                            <imageView translatesAutoresizingMaskIntoConstraints="NO" userInteractionEnabled="NO" contentMode="scaleToFill" id="EqA-Bc-KdA">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="193" id="dJt-4c-IvW"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <gestureRecognizers/>
+                        <constraints>
+                            <constraint firstItem="EqA-Bc-KdA" firstAttribute="leading" secondItem="CDE-Cb-idU" secondAttribute="leading" type="default" id="8Ke-tF-g1D"/>
+                            <constraint firstItem="puq-Fh-ct1" firstAttribute="trailing" secondItem="CDE-Cb-idU" secondAttribute="trailing" type="default" id="K1N-bF-jRX"/>
+                            <constraint firstItem="sip-ws-hP3" firstAttribute="leading" secondItem="CDE-Cb-idU" secondAttribute="leading" type="default" id="SE4-sF-krP"/>
+                            <constraint firstItem="puq-Fh-ct1" firstAttribute="leading" secondItem="CDE-Cb-idU" secondAttribute="leading" type="default" id="fV1-Mh-iS2"/>
+                            <constraint firstItem="EqA-Bc-KdA" firstAttribute="top" secondItem="sip-ws-hP3" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="nyx-2h-Y8x"/>
+                            <constraint firstItem="puq-Fh-ct1" firstAttribute="bottom" secondItem="CDE-Cb-idU" secondAttribute="bottom" type="default" id="qSz-9b-bet"/>
+                            <constraint firstItem="EqA-Bc-KdA" firstAttribute="trailing" secondItem="CDE-Cb-idU" secondAttribute="trailing" type="default" id="xot-Ma-gzS"/>
+                            <constraint firstItem="sip-ws-hP3" firstAttribute="top" secondItem="CDE-Cb-idU" secondAttribute="top" type="default" id="zOg-xF-3cd"/>
+                        </constraints>
                         <connections>
-                            <outlet property="dataSource" destination="e9Y-EX-Do7" id="JCs-ok-vr3"/>
-                            <outlet property="delegate" destination="e9Y-EX-Do7" id="KQq-Iw-LP9"/>
+                            <outletCollection property="gestureRecognizers" destination="1kQ-78-YzN" appends="YES" id="nYt-fG-JTG"/>
                         </connections>
-                    </tableView>
-                    <navigationItem key="navigationItem" id="AJA-De-Mbh">
-                        <barButtonItem key="rightBarButtonItem" title="Picture Bitches" id="WCe-Vx-vsE">
-                            <connections>
-                                <segue destination="scF-fX-gOH" kind="modal" identifier="camera" id="bC4-gD-usD"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="jKB-9d-I3A" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                    </view>
+                    <connections>
+                        <outlet property="imageView" destination="EqA-Bc-KdA" id="gAI-wT-oWe"/>
+                        <outlet property="tableView" destination="puq-Fh-ct1" id="6zy-03-OoN"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8qe-UN-v5X" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <panGestureRecognizer minimumNumberOfTouches="1" id="1kQ-78-YzN">
+                    <connections>
+                        <action selector="handlePan:" destination="lKe-Nx-rdm" id="TTt-JJ-Yqm"/>
+                        <outlet property="delegate" destination="lKe-Nx-rdm" id="HaB-OI-xde"/>
+                    </connections>
+                </panGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="644" y="135"/>
+            <point key="canvasLocation" x="612" y="143"/>
         </scene>
         <!--Map Controller-->
         <scene sceneID="UrW-Dy-XuW">
             <objects>
                 <viewController id="DfR-QA-RQE" customClass="TIMapController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="esN-IF-dA8" customClass="TI">
-                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <mapView translatesAutoresizingMaskIntoConstraints="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" id="Dhm-gW-SD5"/>
@@ -346,24 +385,6 @@
             <point key="canvasLocation" x="2653" y="-261"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="oK3-VS-2QZ">
-            <objects>
-                <navigationController id="D4F-cQ-rtK" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" barStyle="blackOpaque" id="33C-PY-ZTP">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="e9Y-EX-Do7" kind="relationship" relationship="rootViewController" id="YEj-ea-oMp"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="RjV-XF-k2e" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="271" y="135"/>
-        </scene>
-        <!--Navigation Controller-->
         <scene sceneID="5yB-N0-i9j">
             <objects>
                 <navigationController navigationBarHidden="YES" id="scF-fX-gOH" sceneMemberID="viewController">
@@ -393,7 +414,6 @@
             <source key="sourceIdentifier" type="project" relativePath="./Classes/TICameraControllerViewController.h"/>
             <relationships>
                 <relationship kind="action" name="groupSelectDone:"/>
-                <relationship kind="action" name="retakeImage:"/>
                 <relationship kind="action" name="textComplete:"/>
                 <relationship kind="outlet" name="ImageView" candidateClass="UIImageView"/>
                 <relationship kind="outlet" name="detailsField" candidateClass="UITextView"/>
@@ -408,8 +428,13 @@
                 <relationship kind="outlet" name="map" candidateClass="MKMapView"/>
             </relationships>
         </class>
-        <class className="TIViewController" superclassName="UITableViewController">
+        <class className="TIViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/TIViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="handlePan:"/>
+                <relationship kind="outlet" name="imageView" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
+            </relationships>
         </class>
     </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
