--- a/TourIt/en.lproj/MainStoryboard.storyboard
+++ b/TourIt/en.lproj/MainStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2809" systemVersion="11E53" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="lKe-Nx-rdm">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2809" systemVersion="11E53" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="O4g-3c-28X">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1884"/>
     </dependencies>
@@ -43,6 +43,10 @@
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="lKe-Nx-rdm" id="nw2-M7-hAR"/>
+                                    <outlet property="delegate" destination="lKe-Nx-rdm" id="BdE-o5-Ade"/>
+                                </connections>
                             </tableView>
                             <button translatesAutoresizingMaskIntoConstraints="NO" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" hasAttributedTitle="NO" lineBreakMode="middleTruncation" id="sip-ws-hP3">
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
@@ -79,6 +83,7 @@
                             <outletCollection property="gestureRecognizers" destination="1kQ-78-YzN" appends="YES" id="nYt-fG-JTG"/>
                         </connections>
                     </view>
+                    <navigationItem key="navigationItem" id="Bb6-n7-oKg"/>
                     <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="blackOpaque"/>
                     <connections>
                         <outlet property="imageView" destination="EqA-Bc-KdA" id="gAI-wT-oWe"/>
@@ -94,7 +99,7 @@
                     </connections>
                 </panGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="664" y="119"/>
+            <point key="canvasLocation" x="1190" y="119"/>
         </scene>
         <!--Map Controller-->
         <scene sceneID="UrW-Dy-XuW">
@@ -109,10 +114,25 @@
                                     <outlet property="delegate" destination="DfR-QA-RQE" id="hGD-dc-EsY"/>
                                 </connections>
                             </mapView>
+                            <button translatesAutoresizingMaskIntoConstraints="NO" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" hasAttributedTitle="NO" lineBreakMode="middleTruncation" id="npk-Fv-qNB">
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Bitch Please">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="cancelMap:" destination="DfR-QA-RQE" eventType="touchUpInside" id="zwh-Cd-LBK"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="Dhm-gW-SD5" firstAttribute="trailing" secondItem="esN-IF-dA8" secondAttribute="trailing" type="default" id="Deo-fv-01a"/>
+                            <constraint firstAttribute="trailing" secondItem="npk-Fv-qNB" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="Hus-CZ-9q1"/>
+                            <constraint firstItem="npk-Fv-qNB" firstAttribute="top" secondItem="esN-IF-dA8" secondAttribute="top" constant="20" symbolic="YES" type="default" id="IuA-c7-OkG"/>
                             <constraint firstItem="Dhm-gW-SD5" firstAttribute="top" secondItem="esN-IF-dA8" secondAttribute="top" type="default" id="K6L-0w-bbw"/>
                             <constraint firstItem="Dhm-gW-SD5" firstAttribute="leading" secondItem="esN-IF-dA8" secondAttribute="leading" type="default" id="TAU-pP-i4d"/>
                             <constraint firstItem="Dhm-gW-SD5" firstAttribute="bottom" secondItem="esN-IF-dA8" secondAttribute="bottom" type="default" id="nCK-zG-97y"/>
@@ -125,7 +145,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TMN-0d-TOD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1219" y="339"/>
+            <point key="canvasLocation" x="1745" y="339"/>
         </scene>
         <!--Camera Controller View Controller-->
         <scene sceneID="wri-nr-azB">
@@ -188,7 +208,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RzB-JA-Iqs" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1745" y="-261"/>
+            <point key="canvasLocation" x="2271" y="-261"/>
         </scene>
         <!--Camera Controller View Controller-->
         <scene sceneID="NzB-yC-Uhc">
@@ -275,7 +295,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="psn-H0-eTL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2225" y="-261"/>
+            <point key="canvasLocation" x="2751" y="-261"/>
         </scene>
         <!--Camera Controller View Controller-->
         <scene sceneID="Bey-vU-h9p">
@@ -388,7 +408,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Vz5-Gn-NcF" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2653" y="-261"/>
+            <point key="canvasLocation" x="3179" y="-261"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="5yB-N0-i9j">
@@ -406,7 +426,25 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="haX-QR-aKU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1219" y="-261"/>
+            <point key="canvasLocation" x="1745" y="-261"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="qJI-jx-ilu">
+            <objects>
+                <navigationController navigationBarHidden="YES" id="O4g-3c-28X" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="hy8-lx-Es4">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="lKe-Nx-rdm" kind="relationship" relationship="rootViewController" id="Iyn-Ad-EAb"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="z4h-z5-hRf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="664" y="119"/>
         </scene>
     </scenes>
     <resources>
@@ -418,6 +456,6 @@
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="dqL-Bq-75p"/>
+        <segue reference="tXU-Wh-dlI"/>
     </inferredMetricsTieBreakers>
 </document>
